# code-mcp-server

./: .gitignore  README.md  __init__.py  code_mcp  dsl_mcp  environment.yml  main.py  pyproject.toml  requirements.txt  server.py  test_client.py
.cursor/: mcp.json
.promptx/: pouch.json
.promptx/resource/: project.registry.json
.promptx/resource/role/mcp-expert/: mcp-expert.role.md
.promptx/resource/role/mcp-expert/execution/: mcp-development-workflow.execution.md
api/v1/: __init__.py  items.py
controllers/: item_controller.py
core/: config.py  database.py
models/: item.py
providers/: item_provider.py
src/: __init__.py
src/code_mcp/: __init__.py
src/code_mcp/server/: server.py
src/code_mcp/tools/: __init__.py
src/dsl_mcp/: __main__.py
src/dsl_mcp/server/: __init__.py  server.py
tools/: code_analysis.py
